# secret-font

./: .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entry.sh  hook.sh  main.py  nginx.conf  nginx.conf.template  pyproject.toml  setup.sh
backend/: .gitignore  README.md  config.py  main.py
backend/glyphs/: cli.py
backend/scripts/: glyphs.py
backend/src/: config.py  main.py
backend/src/symbols/letters/: b.py  d.py  i.py  j.py  k.py  n.py  o.py  p.py  w.py  x.py
backend/symbols/letters/: a.py  b.py  c.py  d.py  e.py  f.py  g.py  h.py  i.py  j.py  k.py  l.py  m.py  n.py  o.py  p.py  q.py  r.py  s.py  t.py  u.py  v.py  w.py  x.py  y.py  z.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  glyphs.ts
symbols/: a.py  c.py  e.py  f.py  g.py  h.py  i.py  l.py  m.py  q.py  r.py  s.py  t.py  u.py  v.py  y.py  z.py
