[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project]
name = "secret-font"
version = "0.1.0"
dependencies = [
    "Pillow",
]

[project.scripts]
generate-font   = "backend.main:main"
generate-glyphs = "backend.glyphs.cli:main"